ferric/tests/ui/semantic_err_04.stderr
error: undefined observed variable `grass_wet2`
  --> tests/ui/semantic_err_04.rs:28:13
   |
28 |     observe grass_wet2;
   |             ^^^^^^^^^^
